// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should match the snapshot 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-zwt9xa-MuiPaper-root-MuiCard-root"
  >
    <a
      class="MuiButtonBase-root MuiCardActionArea-root css-1rh07hw-MuiButtonBase-root-MuiCardActionArea-root"
      href="/card/test"
      tabindex="0"
    >
      <img
        class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
        height="300"
        src="www.image.ro/1"
      />
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-sd3nu6-MuiTypography-root"
        >
          10/10/2000
        </h6>
        <h1
          class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom line-clamp-2 css-wt7jgy-MuiTypography-root"
        >
          Card
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body2 line-clamp-2 css-1da0jfs-MuiTypography-root"
        >
          Testing the card
        </p>
      </div>
      <span
        class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
      />
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;

exports[`<Card /> should match the snapshot when the slug is create 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-zwt9xa-MuiPaper-root-MuiCard-root"
  >
    <a
      class="MuiButtonBase-root MuiCardActionArea-root css-1rh07hw-MuiButtonBase-root-MuiCardActionArea-root"
      href="/card/create"
      tabindex="0"
    >
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      />
      <span
        class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
      />
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;

exports[`<Card /> should match the snapshot when the slug redirect is false 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-zwt9xa-MuiPaper-root-MuiCard-root"
  >
    <a
      class="MuiButtonBase-root MuiCardActionArea-root css-1rh07hw-MuiButtonBase-root-MuiCardActionArea-root"
      href="/card/1"
      tabindex="0"
    >
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
      />
      <span
        class="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
      />
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;
